# 4-BehavioralPairedTokens

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/generation/: annotate_mcq.py  generate_examples.py  generators.json  import_public.py  prepare_dataset.py
data/handwritten/: handwritten.jsonl
data/processed/: manifest.json
data/processed_v0/: hashes.json
docs/: external_feedback_2026-07-16.md  external_feedback_2026-07-17.md  external_review_2026-07-15.md  mechanism.md
experiments/: decisions.md
experiments/exp0_prompt_baseline/: run_exp0.py  run_exp0_v2.py
experiments/exp1_stability/: README.md  qualitative_playground.md  run_exp1.py  train_config.json  train_config_1b.json
experiments/exp2_distance/: README.md  finalize_early_stop.py  run_exp2.py
experiments/toy_bottleneck/: README.md  run_toy.py
notebooks/: 00_project_status.ipynb  01_dataset_audit.ipynb  03_attention_bottleneck_visualizer.ipynb  README.md
results/: exp0_results.json  exp0_v2.json  exp0_v2_cohort.json  exp0_v2_records.jsonl  exp1_stability.json  exp1b_stability.json  exp2_records.jsonl  exp2_results.json  toy_bottleneck.json  toy_bottleneck_try2.json
results/tables/: dataset_summary.csv
src/: bottleneck.py  config.py  data_contract.py  dataset.py  eval.py  intervention.py  model.py  patching.py  probe.py  stats.py  train.py  try_model.py  utils.py
tests/: conftest.py  test_bottleneck.py  test_data_contract.py  test_pipeline_integration.py  test_qwen_integration.py  test_stats.py
